Improved index iterator, removeRangeSet, addRangeSet impls